Changed some styling to fix misalignments

--- a/styles/2-base/_body.sass
+++ b/styles/2-base/_body.sass
@@ -51,6 +51,11 @@ body
         font-size: 16px
         font-weight: 600
 
+    .row
+        margin-right: 0
+    .container-fluid
+        padding-right: 0
+
     .navbar
         a.social-link img
             max-width: 40px
