--- a/styles/3-pages/_1carousel.sass
+++ b/styles/3-pages/_1carousel.sass
@@ -5,9 +5,11 @@
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption
   z-index: 10
-  top: 45%
+  top: 25%
   h1
     font-size: 50px
+  h2
+    color: #E8C6A4
 
 /* Declare heights because of positioning of img element */
 .carousel .item
@@ -33,7 +35,6 @@
 @media(min-width: 768px)
    .carousel
       height: 100vh
-
    .carousel-caption
       top: 30%
       h1
